# pltxt2htm

./: .clang-format  .clang-tidy  .deepsource.toml  .dockerignore  .gitignore  CONTRIBUTING  CONTRIBUTING.md  Dockerfile  README.md  format.py  format_cpp.ninja  format_xmake.py  gen_dockerignore.py  gen_format_ninja.py  gen_version.py  tidy_cpp.ninja
.github/workflows/: ci.yml  cmd.yml  release.yml  test.yml
c/: CMakeLists.txt  README.md  dist.py  pltxt2htm.cc  pltxt2htm.h  xmake.lua
c/docker/aarch64-apple-darwin24/: Dockerfile  README.md
c/docker/aarch64-linux-android30/: Dockerfile  README.md
c/docker/armv7-linux-androideabi30/: Dockerfile  README.md
c/docker/x86_64-windows-msvc/: Dockerfile  README.md
c/examples/: example.c
c/include/: pltxt2htm.h  pop_macros.h  push_macros.h
c/src/: pltxt2htm.cc
cmd/: CMakeLists.txt  README.md  main.cc  pltxt2htm.cc  xmake.lua
cmd/docker/aarch64-apple-darwin24/: Dockerfile  README.md
cmd/docker/aarch64-linux-musl/: Dockerfile  README.md
cmd/docker/aarch64-windows-msvc/: Dockerfile  README.md
cmd/docker/i586-linux-musl/: Dockerfile  README.md
cmd/docker/i686-windows-msvc/: Dockerfile  README.md
cmd/docker/loongarch64-linux-musl/: Dockerfile  README.md
cmd/docker/wasm32-wasip1/: Dockerfile  README.md
cmd/docker/x86_64-linux-musl/: Dockerfile  README.md
cmd/docker/x86_64-w64-mingw32/: Dockerfile  README.md
cmd/docker/x86_64-windows-msvc/: Dockerfile  README.md
cmd/perf/: README.md  perf.py
csharp/: Program.cs  README.md  pltxt2htm.cs
cxxmodule/: CMakeLists.txt  README.md  example.cc  xmake.lua
cxxmodule/docker/x86_64-linux-gnu/: Dockerfile  README.md
cxxmodule/examples/: CMakeLists.txt  example.cc
cxxmodule/fast_io/: fast_io.cppm
cxxmodule/fast_io/fast_io_inc/: core.inc  freestanding.inc  hosted.inc
cxxmodule/pltxt2htm/: pltxt2htm.cppm
cxxmodule/tests/: CMakeLists.txt  check_public_symbols.cc  header_symbols.cc  module_symbols.cc
dll/: README.md  pltxt2htm.cc
docsgen/: Dockerfile  README.md  doxyfile
examples/: CMakeLists.txt  common.cc  example.cc  fixedadv.cc  unity-richtext.cc  xmake.lua
fuzzing/: CMakeLists.txt  README.md  advanced_parser.cc  common_parser.cc  fixedadv_parser.cc  launch-fuzzing.py  xmake.lua
fuzzing/src/: advanced_parser.cc  fixedadv_parser.cc  fixedadv_roundtrip.cc  plrichtext_parser.cc
include/exception/: exception.hh
include/fast_io/: fast_io_restricted.h
include/fast_io/fast_io_core_impl/: dynamic_output_buffer.h  simd_find.h
include/fast_io/fast_io_legacy_impl/: io.h
include/pltxt2htm/: backend.hh  contracts.hh  heap_guard.hh  optimizer.hh  panic.hh  parser.hh  pltxt2htm.h  pltxt2htm.hh  pop_macro.hh  push_macro.hh  utils.hh  version.hh
include/pltxt2htm/ast/: ast.hh  mod.hh  node_kind.hh  node_type.hh
include/pltxt2htm/astnode/: astnode.hh  basic.hh  enum.hh  html.hh  html_node.hh  markdown.hh  markdown_node.hh  node_type.hh  physics_lab_node.hh  plext.hh  pltxtnode.hh
include/pltxt2htm/backend/: advanced_html.hh  common_html.hh  frame_context.hh
include/pltxt2htm/details/: literal_string.hh  panic.hh  pop_macro.hh  push_macro.hh  utils.hh
js/: README.md  advanced_parser.cc  common_parser.cc  pltxt2htm.cc  xmake.lua
module/: README.md
module/pltxt2htm/: pltxt2htm.cppm
py/: CMakeLists.txt  README.md  after_build.py  pixi.toml  pltxt2htm.cc  setup.py  version.py  xmake.lua
py/docker/aarch64-apple-darwin24/: Dockerfile  README.md
py/docker/x86_64-windows-msvc/: Dockerfile  README.md
rust/: Cargo.toml  README.md
rust/libpltxt2htm-sys/: Cargo.toml  build.rs
rust/libpltxt2htm-sys/examples/: bare.rs
rust/libpltxt2htm-sys/src/: lib.rs  libpltxt2htm_sys.rs
rust/pltxt2htm/: Cargo.toml
rust/pltxt2htm/examples/: recommend.rs  ver.rs
rust/pltxt2htm/src/: lib.rs
scripts/: format_xmake.py  gen_dockerignore.py  gen_format_ninja.py  gen_tidy_ninja.py  gen_version.py
test/: 0001.token.cc  0002.basic.cc  0002.escape.cc  0003.br_tag.cc  0003.inline_parser.cc  0004.color_tag.cc  0005.a_tag.cc  0006.discussion_tag.cc  0007.experiment_tag.cc  0008.i_tag.cc  0009.b_tag.cc  0010.h1_tag.cc  0011.h2_tag.cc  0012.h3_tag.cc  0013.h4_tag.cc  0014.h5_tag.cc  0015.h6_tag.cc  0016.p_tag.cc  0017.user_tag.cc  0018.size_tag.cc  0019.del_tag.cc  0020.md_atx_header.cc  0021.common_parser.cc  0022.md_escape.cc  0023.hr_tag.cc  0024.invalid_utf8_char.cc  0025.fuzzer_leak.cc  0025.html_note.cc  0026.tab.cc  0027.fixedadv_parser.cc  0028.em_tag.cc  0029.strong_tag.cc  0030.fuzzing-crash.cc  0031.ul_and_li_tag.cc  0031.ul_tag.cc  0032.md_thematic_break.cc  0033.code_tag.cc  0034.pre_tag.cc  0035.md_code_fence.cc  0036.md_code_span.cc  (+29 more)
test/data/: comprehensive.md
test/docker/x86_64-linux-gnu-asan/: Dockerfile  (+1 more)
tests/: 0001.token.cc  0002.escape.cc  0003.br_tag.cc  0004.color_tag.cc  0005.a_tag.cc  0006.discussion_tag.cc  0007.experiment_tag.cc  0008.i_tag.cc  0009.b_tag.cc  0010.h1_tag.cc  0011.h2_tag.cc  0012.h3_tag.cc  0013.h4_tag.cc  0014.h5_tag.cc  0015.h6_tag.cc  0016.p_tag.cc  0017.user_tag.cc  0018.size_tag.cc  0019.del_tag.cc  0020.md_atx_header.cc  0021.common_parser.cc  0022.md_escape.cc  0023.hr_tag.cc  0024.invalid_utf8_char.cc  0025.html_note.cc  0026.tab.cc  0027.fixedadv_parser.cc  0028.em_tag.cc  0029.strong_tag.cc  0030.fuzzing-crash.cc  0031.ul_and_li_tag.cc  0032.md_thematic_break.cc  0033.code_tag.cc  0034.pre_tag.cc  0035.md_code_fence.cc  0036.md_code_span.cc  0037.md_emphasis.cc  0038.md_del.cc  0039.bound.cc  0040.fuzzing-crash.cc  (+82 more)
tests/docker/codecov/: Dockerfile  README.md
tests/docker/x86_64-linux-gnu-asan/: Dockerfile
tests/docker/x86_64-linux-gnu-msan/: Dockerfile  README.md
tests/experimental/: compile_time.cc
translang/csharp/: .gitignore  CMakeLists.txt  Dockerfile  README.md  pixi.toml  pltxt2htm.cc  pyproject.toml
translang/csharp/include/: api_instantiaation_visitor.hh  pltxt2htm_header_path.hh
translang/csharp/src/: main.cc  translate.py
wasm/: CMakeLists.txt  README.md  advanced_parser.cc  common_parser.cc  pltxt2htm.cc  xmake.lua
wasm/docker/wasm32-unknown-emscripten/: Dockerfile  README.md
(+64 files in other folders)
